@@ -1,7 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.602 2006/02/23 21:01:02 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.603 2006/02/27 20:35:34 agaffney Exp $
+
+  27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  copy_pkg_to_chroot() uses compile_output.log for command output
 
   23 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   only keep a 1000 line 'scrollback' buffer for the compile output and log file
